syntax = "proto3";

package orderingpb;

import "orderingpb/messages.proto";

service OrderingService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {};
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse) {};
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse) {};
}

message CreateOrderRequest {
  repeated Item items = 1;
  string customer_id = 2;
  string payment_id = 3;
}

message CreateOrderResponse {
  string id = 1;
}

message GetOrderRequest {
  string id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message CancelOrderRequest {
  string id = 1;
}

message CancelOrderResponse {}
