syntax = "proto3";

package jetstream;

import "google/protobuf/timestamp.proto";

message EventMessage {
  message Values {
    repeated string values = 1;
  }

  string id = 1;
  string event_name = 2;
  string aggregate_name = 3;
  string aggregate_id = 4;
  int32 aggregate_version = 5;
  google.protobuf.Timestamp occurred_at = 6;
  map<string, Values> headers = 7;
  bytes data = 8;
}
